# langroid

./: .azure_env_template  .blackignore  .bumpversion.cfg  .coveragerc  .env-template  .env~  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DependencyChatbot.ipynb  Dockerfile  LICENSE  Langroid_quick_start.ipynb  Makefile  PR_954_REVIEW.md  PR_REVIEW.md  PR_REVIEW_975.md  README.md  SECURITY.md  auto_docstring.py  bump_version.sh  chainlit.md  environment.yml~  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  llms-compressed.txt  llms-no-tests-compressed.txt  llms-no-tests-no-examples-compressed.txt  llms-no-tests-no-examples.txt  llms-no-tests.txt  llms.txt  mkdocs.yml  mypy.ini  objects.inv  (+9 more)
.chainlit/: config.toml
.chainlit/translations/: en-US.json
.claude-plugin/: marketplace.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  docker-publish.yml  link.yml  mkdocs-deploy.yml  pytest.yml  requirements-torch.txt  validate.yml
.logs/repo_loader/: download_log.json
.qdrant-openai/: meta.json
.qdrant-sentence-transformer/: meta.json
.qdrant/data/: meta.json
.qdrant/test/: meta.json
.qdrant/testdataopenai/: meta.json
.qdrant/testdatasentence-transformer/: meta.json
.qdrantdb/data/: meta.json
FAQ/: index.html
Overview/: index.html
Resources/: index.html
ai-instructions/: claude-repomix-instructions.md
ai-notes/: handler-parameter-analysis-notes.md  repomix-plan.md
blog/: index.html
datagent/: app.py
datagent/langchain/: web_scraper.py
development/auto-version-bumping/: index.html
development/autofix-lints/: index.html
development/cache-api/: index.html
development/caching-api-calls/: index.html
development/clustering-vectors/: index.html
development/code-analysis-packages/: index.html
development/code-chunking/: index.html
development/code-coverage/: index.html
development/coverage-badge/: index.html
development/dockerfile-generation/: index.html
development/ghost-blog-migration/: index.html
development/git-add-files-from-pr/: index.html
development/git-branch-divergence/: index.html
development/git-return-to-main/: index.html
development/github-cli/: index.html
development/github-workflow-cuda/: index.html
development/github-workflow-testing/: index.html
development/mkdocs-macros/: index.html
development/pdf-extract-text/: index.html
development/poetry-package-building/: index.html
development/poetry-package-private-repo/: index.html
development/pydantic-abstract-class/: index.html
development/pydantic-class-as-arg/: index.html
development/pydantic-docstring/: index.html
development/pydantic-fields/: index.html
development/pydantic-message-class/: index.html
development/releases/: index.html
development/repo-scraping/: index.html
development/running-code-container/: index.html
development/search-github/: index.html
development/viewing-git-pr/: index.html
docs/: FAQ.md  auto_docstring.py  index.md  quick-start.md
docs/api/: language_models_base.md
docs/blog/: .authors.yml
docs/development/: auto-version-bumping.md  autofix-lints.md  cache-api.md  caching-api-calls.md  clustering-vectors.md  code-analysis-packages.md  code-chunking.md  code-coverage.md  coverage-badge.md  diagrams.md  dockerfile-generation.md  ghost-blog-migration.md  git-add-files-from-pr.md  git-branch-divergence.md  git-return-to-main.md  (+17 more)
examples/: Langroid_QuickStart_OpenAI_Assistants_API.ipynb  Langroid_quick_start.ipynb  README.md  base_config.py  langroid_quick_examples.ipynb
issues/: 20251010-concurrent-rag-status.md  20251010-concurrent-rag.md  20251011-cross-encoder-race-bug.md  20251011-pr-926-description.md  20251107-fix-mcp-dectorator.md  20251123-new-model-support-gpt51-gemini30.md  898-implementation.md  html-logger-implementation.md  html-logger.md  issue-919-llamacpp-embeddings.md  langroid-mcp-server-spec-CHANGES.md  langroid-mcp-server-spec-updates.md  llm-client-caching-phase1-summary.md  llm-client-caching-phase2-summary.md  llm-client-caching-test-summary.md  llm-client-caching.md  openai-responses-api-spec.md  openai-responses-implementation-plan.md  openai-responses-routing-spec.md  pr-882-cached-tokens-improvements.md  pr-openai-client-caching.md  pr-qdrant-lock-fix.md  qdrant-lock-issue-spec-changes.md
javascripts/: mathjax.js
langroid/: __init__.py  exceptions.py  index.html  mytypes.py
llmagent/: mytypes.py
logs/: A.tsv  DockerExpert.tsv  Extractor.tsv  LLM-Agent.tsv  LeaseExtractorAgent.tsv  Marketer.tsv  Master.tsv  Segmentor.tsv  Test.tsv  WriterAgent.tsv  test-langroid.tsv
quick-start/: index.html
reference/: index.html
release-notes/: v0-56-0-task-tool.md  v0-56-11-openai-client-caching.md  v0-56-12-cached-tokens-support.md  v0-56-13-done-sequences-parent-chain-fixes.md  v0-56-15-response-sequence-tracking.md  v0-56-2-table-chat-fix.md  v0-56-4-handler-params.md  v0-56-6-doc-chat-refactor.md  v0-56-7-doc-chat-deprecation-fix.md  v0-56-8-task-tool-spawn-example.md  v0-56-9-rrf-crossencoder-fixes.md  v0-58-0-crawl4ai-integration.md  v0.56.10-doc-ingest-progress-bar-implementation.md  v0.56.10-doc-ingest-progress-bar.md  v0.57.0-html-logger-auto-refresh.md  v0.57.0-html-logger.md
scripts/: fix-pydantic-imports.sh
search/: search_index.json
stylesheets/: extra.css
tests/: README.md  configs.py  conftest.py  test_agent.py  test_agent_messages.py  test_chat_agent.py  test_code_parser.py  test_cot_agent.py  test_custom_agent.py  test_dockerfile_extraction.py  test_dockerfile_validation.py  test_embedding_clusters.py  test_embeddings.py  test_identfiy_python_version.py  test_json.py  test_llm.py  test_multi_agent.py  test_multi_agent_complex.py  test_parser.py  test_pdf_parser_extra.py  test_redis_cache.py  test_repo_chunking.py  test_repo_loader.py  test_repo_vectorize.py  test_url_loader.py  test_vector_stores.py  utils.py
tests/main/mcp/weather-server-python/: README.md  pyproject.toml  weather.py
(+1243 files in other folders)
